--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
+    "build-dev": "webpack-dev-server  --config webpack.dev.js --open --port 3000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
@@ -22,8 +24,12 @@
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
+    "body-parser": "^1.19.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cors": "^2.8.5",
     "css-loader": "^5.0.1",
+    "follow-redirects": "^1.13.2",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
