--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "example-project",
   "version": "1.0.0",
   "main": "index.js",
+  "jest" : {
+    "globals": {
+      "__Client__": ""
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open --port 3000"
@@ -13,15 +18,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/runtime": "^7.12.13",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
+    "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
@@ -31,6 +38,7 @@
     "follow-redirects": "^1.13.2",
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
